--- a/index.html
+++ b/index.html
@@ -391,17 +391,17 @@
 <tbody>
 	<tr>
 		<td>Java版 20w51a</td>
-		<td>v1.12-0104</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0104">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0104">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0104.zip">其它</a></td>
+		<td>v1.12-0109</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0109">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0109">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0109.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-0104</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0104">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0104">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0104.zip">其它</a></td>
+		<td>v1.11.2-0109</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0109">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0109">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0109.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -3376,8 +3376,7 @@
 	<td><a class="ui nether_gold_ore" title="下界金矿石"></a></td>
 	<td><a class="ui diamond_ore" title="钻石矿石"></a></td>
 	<td><a class="ui emerald_ore" title="绿宝石矿石"></a></td>
-	<td rowspan="2" colspan="5">镐不可含精准附魔，需要<br/>相应挖掘等级，受时运加成</td>
-	<td></td>
+	<td rowspan="2" colspan="6">镐不可含精准附魔，需要<br/>相应挖掘等级，受时运加成</td>
 </tr>
 <tr><td><a class="ui leather" title="皮革"></a></td>
 	<td><a class="ui snow_block" title="雪块"></a></td>
@@ -3392,7 +3391,6 @@
 	<td><a class="ui gold_nugget" title="金粒"><span class="stack">?</span></a></td>
 	<td><a class="ui diamond" title="钻石"><span class="stack">?</span></a></td>
 	<td><a class="ui emerald" title="绿宝石"><span class="stack">?</span></a></td>
-	<td></td>
 </tr>
 
 <tr>
@@ -3543,9 +3541,9 @@
 	<td><a class="ui glass_bottle" title="玻璃瓶"></a></td>
 	<td><a class="ui black_concrete_powder" title="混凝土粉末"></a></td>
 	<td><a class="ui ci broken_red_coat" title="皮革盔甲"></a></td>
+	<td><a class="ui leather_horse_armor" title="皮革马铠"></a></td>
 	<td><a class="ui banner_blue_mojang" title="旗帜"></a></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui ci dye_stick" title="染色棒"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3563,10 +3561,10 @@
 	<td><a class="ui map" title="空地图"></a></td>
 	<td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui black_concrete" title="混凝土"></a></td>
-	<td><a class="ui broken_leather_chestplate" title="去掉染色的皮革盔甲"></a></td>
+	<td><a class="ui leather_chestplate" title="去掉染色的皮革盔甲"></a></td>
+	<td><a class="ui leather_horse_armor" title="去掉染色的皮革马铠"></a></td>
 	<td><a class="ui white_banner" title="去掉图案的旗帜"></a></td>
-	<td></td>
-	<td></td>
+	<td><a class="ui ci dye_stick" title="去掉颜色的染色棒"></a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3586,8 +3584,7 @@
 	<td><a class="ui netherrack" title="下界岩"></a></td>
 	<td rowspan="2" colspan="4">需要机器上方为相应<br/>菌岩，骨粉会被消耗</td>
 	<th rowspan="2"><a href="#压缩器" class="ui ci compressor" title="压缩器"></a></th>
-	<td colspan="3">64个任意物品</td>
-	<td></td>
+	<td colspan="4">64个任意物品</td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -3598,8 +3595,7 @@
 	<td><a class="ui mycelium" title="菌丝"></a></td>
 	<td><a class="ui warped_nylium" title="诡异菌岩"></a></td>
 	<td><a class="ui crimson_nylium" title="绯红菌岩"></a></td>
-	<td colspan="3">对应的重数+1物品</td>
-	<td></td>
+	<td colspan="4">对应的重数+1物品</td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -6244,7 +6240,7 @@
 <p><span class="version">1.11.2起</span> 右键玻璃/玻璃板/蜡烛/潜影盒/陶瓦来清除方块颜色，右键告示牌来清除告示牌文字颜色，Shift右键染色过的告示牌来清除告示牌的颜色。在<a href="#调色板" title="调色板">调色板</a>中修改颜色后，右键羊毛/玻璃/玻璃板/蜡烛/潜影盒/混凝土/混凝土粉末/陶瓦/带釉陶瓦/旗帜/地毯来染色，右键告示牌来染色告示牌文字，Shift右键告示牌来<a href="#彩色告示牌">染色告示牌</a>。</p>
 
 <h3 id="剪枝器">剪枝器 <code>cpp:grafter</code></h3>
-<table><thead><tr><th>材料</th><th>合成配方</th></tr></thead><tbody>
+<table><thead><tr><th>材料</th><th>合成配方</th><th>说明</th></tr></thead><tbody>
 <tr><td><a href="#附魔铁锭">附魔铁锭</a>+木棍</td>
 	<td><span class="ui cm" title="合成器">
 		<a class="empty"></a>
@@ -6257,7 +6253,7 @@
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="ci grafter" title="剪枝器"></a>
-	</span></td></tr>
+	</span></td><td>该配方可以水平翻转。</td></tr>
 </tbody></table>
 <p>破坏树叶必定掉落树苗，破坏下界疣块/诡异疣块/棕色蘑菇方块/红色蘑菇方块可以得到绯红菌/诡异菌/棕色蘑菇/红色蘑菇。每次使用消耗2点耐久，共132点耐久。</p>
 
@@ -10244,6 +10240,7 @@
 
 <!--==================================================================-->
 <h2 id="进度">进度</h2>
+<p><span class="version">1.11.2起</span> 现在均衡饮食进度需要食用本模组所有食物，奖励5000经验值。</p>
 <p>新增26项进度，完成进度会给予玩家经验、物品或状态效果。</p>
 <table class="adv">
 <thead><tr><th>图标</th>
@@ -10509,7 +10506,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-01-04</p>
+<p>最后更新 2021-01-09</p>
 </footer>
 
 </article>
