--- a/test.html
+++ b/test.html
@@ -19,8 +19,8 @@
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
 	</thead>
 	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了焦糖布丁。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在合成需要碗，食用后也会剩下碗。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了野花。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了艾草。</td></tr>
 	</tbody>
 </table> 
 
