--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<li><a href="#月石"><span class="ci" style="background-position: -48px -80px;"></span> 月石</a></li>
 	<li><a href="#日石"><span class="ci" style="background-position: -64px -80px;"></span> 日石</a></li>
 	<li><a href="#铁链"><span class="ci" style="background-position: -80px -80px;"></span> 铁链</a></li>
-	<li><a href="#粘土桶"><span class="ci" style="background-position: -96px -80px;"></span> 粘土桶</a></li>
+	<li><a href="#黏土桶"><span class="ci" style="background-position: -96px -80px;"></span> 黏土桶</a></li>
 	<li><a href="#热带鱼桶染色"><span style="background-position: -320px -832px;"></span> 热带鱼桶染色</a></li>
 	<li><a href="#刷怪蛋"><span style="background-position: -416px -560px;"></span> 刷怪蛋</a></li>
 	<li><a href="#其它原版物品"><span style="background-position: -96px -64px;"></span> 其它原版物品</a></li>
@@ -391,17 +391,17 @@
 <tbody>
 	<tr>
 		<td>Java版 20w51a</td>
-		<td>v1.12-0109</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0109">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0109">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0109.zip">其它</a></td>
+		<td>v1.12-0111</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-0111">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-0111">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-0111.zip">其它</a></td>
 	</tr>
 	<tr>
 		<td>Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-0109</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0109">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0109">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0109.zip">其它</a></td>
+		<td>v1.11.2-0111</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-0111">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-0111">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-0111.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
@@ -772,8 +772,8 @@
 	<td>绿宝石</td>
 	<td>12</td>
 </tr>
-<tr><td><a class="ui slime_ball" title="36-40 粘液球"></a></td>
-	<td>36-40 粘液球</td>
+<tr><td><a class="ui slime_ball" title="36-40 黏液球"></a></td>
+	<td>36-40 黏液球</td>
 	<td><a class="ui emerald" title="绿宝石"></a></td>
 	<td>绿宝石</td>
 	<td>12</td>
@@ -1599,14 +1599,14 @@
 <tr><td><a href="#粗硅" class="ui ci coarse_silicon"></a><a href="#空气瓶" class="ui ci bottle_of_air"></a></td>
 	<td><a href="#粗硅">粗硅</a>+<a href="#空气瓶">空气瓶</a></td>
 	<td><a href="#硅粉" class="ui ci silicon_dust"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
-	<td><a href="#硅粉">硅粉</a>>+玻璃瓶</td>
+	<td><a href="#硅粉">硅粉</a>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
-<tr><td><a class="ui clay_ball" title="粘土球"></a><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
-	<td>粘土球+<a href="#盐瓶">盐瓶</a></td>
+<tr><td><a class="ui clay_ball" title="黏土球"></a><a href="#盐瓶" class="ui ci bottle_of_salt"></a></td>
+	<td>黏土球+<a href="#盐瓶">盐瓶</a></td>
 	<td><a href="#稀土盐" class="ui ci rare_earth_salt"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
-	<td><a href="#稀土盐">稀土盐</a>>+玻璃瓶</td>
+	<td><a href="#稀土盐">稀土盐</a>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -1620,7 +1620,7 @@
 <tr><td><a href="#碱性稀土" class="ui ci alkaloid_rare_earth"></a><a href="#生物酸" class="ui ci bionic_acid"></a></td>
 	<td><a href="#碱性稀土">碱性稀土</a>+<a href="#生物酸">生物酸</a></td>
 	<td><a href="#稀土粉" class="ui ci rare_earth_dust"></a><a class="ui glass_bottle" title="玻璃瓶"></a></td>
-	<td><a href="#稀土粉">稀土粉</a>>+玻璃瓶</td>
+	<td><a href="#稀土粉">稀土粉</a>+玻璃瓶</td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -1632,9 +1632,9 @@
 	<td>10</td>
 </tr>
 <tr><td><a class="ui slime_ball"></a><a class="ui dirt"></a></td>
-	<td>粘液球+泥土</td>
+	<td>黏液球+泥土</td>
 	<td><a class="ui clay"></a></td>
-	<td>粘土块 </td>
+	<td>黏土块 </td>
 	<td>4</td>
 	<td>10</td>
 </tr>
@@ -1806,9 +1806,9 @@
 	<td>2.5</td>
 </tr>
 <tr><td><a class="ui clay"></a><a class="ui flint"></a></td>
-	<td>粘土块+燧石</td>
+	<td>黏土块+燧石</td>
 	<td><a class="ui slime_ball"></a></td>
-	<td>粘液球</td>
+	<td>黏液球</td>
 	<td>1</td>
 	<td>2.5</td>
 </tr>
@@ -2174,7 +2174,7 @@
 <tr><td><a href="#空气瓶" title="空气瓶" class="ui ci bottle_of_air"></a><a title="鸡蛋" class="ui egg"></a></td>
 	<td><a href="#空气瓶">空气瓶</a>+鸡蛋</td>
 	<td><a href="#疫苗" class="ui ci vaccine_of_darkness"></a></td>
-	<td><a href="#疫苗">疫苗</a> <br /><span class="lore">免疫 黑暗(12:00:00)</span></td>
+	<td><a href="#疫苗">疫苗</a> <br /><span class="lore">免疫 黑暗(10:00:00)</span></td>
 	<td>8</td>
 	<td>60</td>
 </tr>
@@ -2351,7 +2351,7 @@
 <tr><td><a class="ui dried_kelp_block" title="干海带块"></a></td><td>干海带块</td><td>205</td><td>4</td></tr>
 <tr><td><a class="ui sweet_berries" title="甜浆果"></a></td><td>甜浆果</td><td>205</td><td>4</td></tr>
 <tr><td><a class="ui coal" title="煤炭"></a></td><td>煤炭</td><td>205</td><td>3</td></tr>
-<tr><td><a class="ui clay_ball" title="粘土球"></a></td><td>粘土球</td><td>205</td><td>3</td></tr>
+<tr><td><a class="ui clay_ball" title="黏土球"></a></td><td>黏土球</td><td>205</td><td>3</td></tr>
 <tr><td><a class="ui glass_pane" title="玻璃板"></a></td><td>玻璃板</td><td>186</td><td>3</td></tr>
 <tr><td><a class="ui quartz" title="下界石英"></a></td><td>下界石英</td><td>171</td><td>4</td></tr>
 <tr><td><a class="ui red_dye" title="染料"></a></td><td>染料</td><td>171</td><td>3</td></tr>
@@ -2384,7 +2384,7 @@
 <tr><td><a class="ui bone_meal" title="骨粉"></a></td><td>骨粉</td><td>57</td><td>1</td></tr>
 <tr><td><a class="ui gunpowder" title="火药"></a></td><td>火药</td><td>57</td><td>1</td></tr>
 <tr><td><a class="ui blaze_powder" title="烈焰粉"></a></td><td>烈焰粉</td><td>57</td><td>1</td></tr>
-<tr><td><a class="ui slime_ball" title="粘液球"></a></td><td>粘液球</td><td>57</td><td>1</td></tr>
+<tr><td><a class="ui slime_ball" title="黏液球"></a></td><td>黏液球</td><td>57</td><td>1</td></tr>
 <tr><td><a class="ui arrow" title="箭"></a></td><td>箭</td><td>57</td><td>1</td></tr>
 <tr><td><a class="ui prismarine_shard" title="海晶砂粒"></a></td><td>海晶砂粒</td><td>57</td><td>1</td></tr>
 </tbody></table>
@@ -2662,8 +2662,8 @@
 </tr>
 <tr><td><a href="#交易插件" class="ui ci trade_plugin1"></a><a class="ui emerald" title="绿宝石"><span class="stack">5</span></a></td>
 	<td><a href="#交易插件">交易插件</a>(不消耗)+5 绿宝石</td>
-	<td><a class="ui slime_ball" title="粘液球"></a></td>
-	<td>粘液球</td>
+	<td><a class="ui slime_ball" title="黏液球"></a></td>
+	<td>黏液球</td>
 	<td>1</td>
 	<td>10</td>
 </tr>
@@ -2990,7 +2990,7 @@
 	<td class="left">
 		<a class="ui crimson_stem" title="绯红菌柄"></a>
 		<a class="ui warped_stem" title="诡异菌柄"></a>
-		<a class="ui slime_ball" title="粘液球"></a>
+		<a class="ui slime_ball" title="黏液球"></a>
 		<a class="ui honey_bottle" title="蜂蜜瓶"></a>
 		<a class="ui magma_cream" title="岩浆膏"></a>
 	</td>
@@ -3064,7 +3064,7 @@
 		<a class="ui sugar_cane" title="甘蔗"></a>
 		<a class="ui vine" title="藤蔓"></a>
 		<a class="ui lily_pad" title="睡莲"></a>
-		<a class="ui clay_ball" title="粘土球"></a>
+		<a class="ui clay_ball" title="黏土球"></a>
 		<a class="ui kelp" title="海带"></a>
 		<a class="ui cocoa_beans" title="可可豆"></a>
 		<a class="ui nether_wart" title="下界疣"></a>
@@ -3192,7 +3192,7 @@
 	<td><a class="ui mycelium" title="菌丝"></a></td>
 	<td><a class="ui podzol" title="灰化土"></a></td>
 	<td><a class="ui gravel" title="砂砾"></a></td>
-	<td><a class="ui clay" title="粘土块"></a></td>
+	<td><a class="ui clay" title="黏土块"></a></td>
 	<td><a class="ui snow_block" title="雪块"></a></td>
 	<th rowspan="2"><a class="ui stone_hoe" title="锄"></a></th>
 	<td><a class="ui coarse_dirt" title="砂土"></a></td>
@@ -3212,7 +3212,7 @@
 	<td><a class="ui dirt" title="泥土"></a></td>
 	<td><a class="ui dirt" title="泥土"></a></td>
 	<td><a class="ui flint" title="燧石"></a></td>
-	<td><a class="ui clay_ball" title="粘土球"><span class="stack">4</span></a></td>
+	<td><a class="ui clay_ball" title="黏土球"><span class="stack">4</span></a></td>
 	<td><a class="ui snowball" title="雪球"><span class="stack">4</span></a></td>
 	<td><a class="ui dirt" title="泥土"></a></td>
 	<td><a class="ui gold_nugget" title="金粒"><span class="stack">2-5</span></a></td>
@@ -3321,7 +3321,7 @@
 	<td><a class="ui melon_slice" title="西瓜片"><span class="stack">9</span></a></td>
 	<td><a class="ui dried_kelp" title="干海带"><span class="stack">9</span></a></td>
 	<td><a class="ui nether_wart" title="下界疣"><span class="stack">9</span></a></td>
-	<td><a class="ui slime_ball" title="粘液球"><span class="stack">9</span></a></td>
+	<td><a class="ui slime_ball" title="黏液球"><span class="stack">9</span></a></td>
 	<td><a class="ui bone_meal" title="骨粉"><span class="stack">9</span></a></td>
 	<td><a href="#碎钻" class="ui ci splint" title="碎钻"><span class="stack">9</span></a></td>
 	<td><a class="ui coal" title="煤炭"><span class="stack">9</span></a></td>
@@ -3342,7 +3342,7 @@
 	<td><a class="ui melon" title="西瓜"></a></td>
 	<td><a class="ui dried_kelp_block" title="干海带块"></a></td>
 	<td><a class="ui nether_wart_block" title="下界疣块"></a></td>
-	<td><a class="ui slime_block" title="粘液块"></a></td>
+	<td><a class="ui slime_block" title="黏液块"></a></td>
 	<td><a class="ui bone_block" title="骨块"></a></td>
 	<td><a class="ui diamond" title="钻石"></a></td>
 	<td><a class="ui coal_block" title="煤块"></a></td>
@@ -3364,7 +3364,7 @@
 	<td><a class="ui rabbit_hide" title="兔子皮"><span class="stack">4</span></a></td>
 	<td><a class="ui snowball" title="雪球"><span class="stack">4</span></a></td>
 	<td><a class="ui glowstone_dust" title="荧石粉"><span class="stack">4</span></a></td>
-	<td><a class="ui clay_ball" title="粘土球"><span class="stack">4</span></a></td>
+	<td><a class="ui clay_ball" title="黏土球"><span class="stack">4</span></a></td>
 	<td><a class="ui quartz" title="石英"><span class="stack">4</span></a></td>
 	<td><a class="ui copper_ingot" title="铜锭"><span class="stack">4</span></a></td>
 	<!-- <th rowspan="2"><a class="ui stone_pickaxe" title="镐"></a></th> -->
@@ -3381,7 +3381,7 @@
 <tr><td><a class="ui leather" title="皮革"></a></td>
 	<td><a class="ui snow_block" title="雪块"></a></td>
 	<td><a class="ui glowstone" title="荧石"></a></td>
-	<td><a class="ui clay" title="粘土块"></a></td>
+	<td><a class="ui clay" title="黏土块"></a></td>
 	<td><a class="ui quartz_block" title="石英块"></a></td>
 	<td><a class="ui copper_block" title="铜块"></a></td>
 	<td><a class="ui coal" title="煤炭"><span class="stack">?</span></a></td>
@@ -3482,7 +3482,7 @@
 	<td><a class="ui ghast_tear" title="恶魂之泪"></a></td>
 	<td><a class="ui ender_pearl" title="末影珍珠"></a></td>
 	<td><a class="ui blaze_powder" title="烈焰粉"></a></td>
-	<td><a class="ui slime_ball" title="粘液球"></a></td>
+	<td><a class="ui slime_ball" title="黏液球"></a></td>
 </tr>
 
 <tr>
@@ -3536,7 +3536,7 @@
 	<td><a class="ui green_bed" title="彩色床"></a></td>
 	<td><a class="ui sponge" title="海绵"></a></td>
 	<td colspan="2"><a class="ui lava_bucket" title="熔岩桶"></a></td>
-	<td><a class="ui sticky_piston" title="粘性活塞"></a></td>
+	<td><a class="ui sticky_piston" title="黏性活塞"></a></td>
 	<td><a class="ui filled_map" title="地图"></a></td>
 	<td><a class="ui glass_bottle" title="玻璃瓶"></a></td>
 	<td><a class="ui black_concrete_powder" title="混凝土粉末"></a></td>
@@ -3788,8 +3788,8 @@
 <tr><td>史莱姆</td>
 	<td><a class="ui ci mob_slime" title="史莱姆"></a></td>
 	<td><a class="ui egg" title="鸡蛋"></a>
-		<a class="ui slime_ball" title="粘液球"></a>
-		<a class="ui clay_ball" title="粘土球"></a>
+		<a class="ui slime_ball" title="黏液球"></a>
+		<a class="ui clay_ball" title="黏土球"></a>
 		<a class="ui xp_orb" title="经验"><span class="stack">8</span></a>
 	</td>
 </tr>
@@ -4546,10 +4546,15 @@
 	<td><code>cpp:ancient_scroll.power</code></td>
 </tr>
 <tr><th><span class="lore">锋利 V</span></th>
-	<td><code>cpp:ancient_scroll.sharpness</code></td></tr>
+	<td><code>cpp:ancient_scroll.sharpness</code></td>
+</tr>
+<tr><th><span class="lore">经验修补</span></th>
+	<td><code>cpp:ancient_scroll.mending</code></td>
+</tr>
 </tbody></table>
 <p>在<a href="#附魔室">附魔室</a>箱子中有几率出现，一共8种。在<a href="#金砧">金砧</a>中可用于给拥有相同等级相应附魔的物品的附魔等级+1。</p>
 <p>可以通过打开<a href="#圣诞礼物">圣诞礼物</a>得到。</p>
+<p><span class="version">1.11.2起</span> 经验修补 II 的手持物或盔甲的耐久不满时，会抽取自身最多63点经验来生成相应经验球来实现修复效果。当缺少的耐久值为1时，此时不消耗经验就可以修复，相当于无损修复。</p>
 
 <h3 id="附魔之瓶">附魔之瓶</h3>
 <p>附魔之瓶存储的经验值固定为9点。当玩家副手持有漏斗时，经验会以每刻9点的速度转化为附魔之瓶。如果此时玩家主手还持有<a href="#压缩器">压缩器</a>，经验会以每刻576点的速度转化为<a href="#压缩器">附魔之瓶(64×)</a>。</p>
@@ -4785,7 +4790,7 @@
 </tr>
 <tr>
 	<td><a href="#铁粉">铁粉</a>+<a href="#金粉">金粉</a>+<a href="#钻石粉">钻石粉</a>+<a href="#绿宝石粉">绿宝石粉</a>+<br />
-		<a href="#石英粉">石英粉</a>+<a href="#碳粉">碳粉</a>+粘液球+恶魂之泪+<br />
+		<a href="#石英粉">石英粉</a>+<a href="#碳粉">碳粉</a>+黏液球+恶魂之泪+<br />
 		末影珍珠</td>
 	<td><span class="ui cm" title="合成器">
 		<a href="#铁粉" class="ci iron_dust" title="铁粉"></a>
@@ -4794,7 +4799,7 @@
 		<a href="#绿宝石粉" class="ci emerald_dust" title="绿宝石粉"></a>
 		<a href="#石英粉" class="ci quartz_dust" title="石英粉"></a>
 		<a href="#碳粉" class="ci carbon_dust" title="碳粉"></a>
-		<a class="slime_ball" title="粘液球"></a>
+		<a class="slime_ball" title="黏液球"></a>
 		<a class="ghast_tear" title="恶魂之泪"></a>
 		<a class="ender_pearl" title="末影珍珠"></a>
 		<a class="ci moon_shard" title="月之碎片"></a>
@@ -4911,28 +4916,28 @@
 		<span class="oldversion">1.10.x</span> 可用于制作锁链盔甲。</td>
 </tr>
 
-<tr id="粘土桶">
-	<th><strong>粘土桶</strong></th>
-	<td>粘土球</td>
+<tr id="黏土桶">
+	<th><strong>黏土桶</strong></th>
+	<td>黏土球</td>
 	<td><span class="ui cm" title="合成器">
 		<a class="empty"></a>
 		<a class="empty"></a>
 		<a class="empty"></a>
-		<a class="clay_ball" title="粘土球"></a>
+		<a class="clay_ball" title="黏土球"></a>
 		<a class="empty"></a>
-		<a class="clay_ball" title="粘土球"></a>
+		<a class="clay_ball" title="黏土球"></a>
 		<a class="empty"></a>
-		<a class="clay_ball" title="粘土球"></a>
+		<a class="clay_ball" title="黏土球"></a>
 		<a class="empty"></a>
-		<a class="ci clay_bucket" title="粘土桶"></a>
+		<a class="ci clay_bucket" title="黏土桶"></a>
 	</span></td>
 	<td><code>cpp:clay_bucket</code></td>
 </tr>
 
 <tr><th>桶</th>
-	<td>粘土桶</td>
+	<td>黏土桶</td>
 	<td><span class="ui fur" title="熔炉">
-		<a class="ci clay_bucket" title="粘土桶"></a>
+		<a class="ci clay_bucket" title="黏土桶"></a>
 		<a class="coal" title="燃料"></a>
 		<a class="bucket" title="桶"></a>
 	</span></td>
@@ -5569,11 +5574,11 @@
 
 <tr id="稀土盐">
 	<th><strong>稀土盐</strong></th>
-	<td>粘土球+<a href="#盐瓶">盐瓶</a></td>
+	<td>黏土球+<a href="#盐瓶">盐瓶</a></td>
 	<td><span class="ui aiom" title="多功能一体机">
 		<a class="ci high_temperature_plugin" title="高温"></a>
 		<a class="ci low_pressure" title="低压"></a>
-		<a class="clay_ball" title="粘土球"></a>
+		<a class="clay_ball" title="黏土球"></a>
 		<a class="ci bottle_of_salt" title="盐瓶"></a>
 		<a class="ci rare_earth_salt" title="稀土盐"></a>
 		<a class="empty"></a>
@@ -8545,7 +8550,7 @@
 	<th><strong id="酢浆草">酢浆草</strong></th>
 	<td><code>cpp:oxalis</code></td>
 	<td>菖蒲草+紫荆花</td>
-	<td><a class="ui slime_ball" title="粘液球"></a></td>
+	<td><a class="ui slime_ball" title="黏液球"></a></td>
 	<td><a class="ui icons18 slowness"></a><span class="lore">缓慢 0:05</span></td>
 </tr>
 </tbody></table>
@@ -8891,7 +8896,7 @@
 
 <table><thead><tr><th>状态效果</th>
 	<th>所需药剂</th>
-	<th>附加物</th>
+	<th>生效栏位</th>
 </tr></thead><tbody>
 <tr><td>速度</td>
 	<td><a href="#敏捷药剂">敏捷药剂</a> (速度 II(4:00))</td>
@@ -8903,27 +8908,27 @@
 </tr>
 <tr><td>急迫</td>
 	<td><a href="#极限药剂">极限药剂</a> (急迫 II(4:00))</td>
-	<td>手持物</td>
+	<td>主手</td>
 </tr>
 <tr><td>力量</td>
 	<td><a href="#锋锐药剂">锋锐药剂</a> (力量 II(4:00))</td>
-	<td>手持物</td>
+	<td>主手</td>
 </tr>
 <tr><td>再生</td>
 	<td><a href="#回春药剂">回春药剂</a> (生命恢复 II(2:00))</td>
-	<td>盔甲</td>
+	<td>盔甲栏</td>
 </tr>
 <tr><td>抗性提升</td>
 	<td><a href="#护盾药剂">护盾药剂</a> (抗性提升 II(4:00))</td>
-	<td>盔甲</td>
+	<td>盔甲栏</td>
 </tr>
 <tr><td>防火</td>
 	<td><a href="#炎盾药剂">炎盾药剂</a> (防火(8:00))</td>
-	<td>盔甲</td>
+	<td>盔甲栏</td>
 </tr>
 <tr><td>隐身</td>
 	<td><a href="#透明药剂">透明药剂</a> (隐身(8:00))</td>
-	<td>盔甲</td>
+	<td>盔甲栏</td>
 </tr>
 <tr><td>水下呼吸</td>
 	<td><a href="#避水药剂">避水药剂</a> (水下呼吸(8:00))</td>
@@ -8947,13 +8952,19 @@
 </tr>
 <tr><td>连锁</td>
 	<td><a href="#连环药剂">连环药剂</a> (连锁(8:00))</td>
-	<td>斧、镐、锹、锄</td></tr>
+	<td>主手</td></tr>
+<tr><td><span class="version">1.11.2起</span> 磁力</td>
+	<td><a href="#磁铁">磁铁</a></td>
+	<td>主手或副手或盔甲栏</td></tr>
+	
 </tbody></table>
 
 <p>每件物品只可附加一种效果。效果可重复附加，之前的效果将会被覆盖。</p>
 <p>盔甲效果在对应栏位生效，剑和工具在主手生效，每秒消耗1点经验值，重复的效果不会叠加但消耗的经验值会叠加。使用<a href="#节制器">节制器</a>可开启/关闭所有效果。连锁效果无消耗。</p>
 
-<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/粘土块；锄可以破坏相连的干草块/下界疣块/诡异疣块/菌光体。受附魔影响。工具不会完全损坏，至少会保留1点耐久。支持植物魔法和通用机械的工具。</p>
+<p>连锁效果下，使用斧可以破坏相连的木头/瓜/成熟作物；镐可以破坏相连的矿物/黑曜石；锹可以破坏相连的沙子/红沙/砂砾/黏土块；锄可以破坏相连的干草块/下界疣块/诡异疣块/菌光体。受附魔影响。工具不会完全损坏，至少会保留1点耐久。支持植物魔法和通用机械的工具。</p>
+
+<p>磁力效果类似磁铁，不受节制器控制。</p>
 
 <h4 id="属性附加">属性附加</h4>
 <ul>
@@ -10160,7 +10171,7 @@
 	<td><a class="ui bamboo" title="竹子"></a></td>
 	
 	<td><a class="ui quartz" title="石英"></a></td>
-	<td><a class="ui clay_ball" title="粘土球"></a></td>
+	<td><a class="ui clay_ball" title="黏土球"></a></td>
 	<td><a class="ui nether_wart" title="下界疣"></a></td>
 	<td><a class="ui blaze_powder" title="烈焰粉"></a></td>
 	<td><a class="ui weeping_vines" title="垂泪藤"></a></td>
@@ -10169,7 +10180,7 @@
 </tr>
 <tr>
 	<td>32% 草丛</td><td>8% 橡树树苗</td><td>8% 云杉树苗</td><td>8% 白桦树苗</td><td>8% 丛林树苗</td><td>8% 金合欢树苗</td><td>8% 深色橡树树苗</td><td>2% 水果树树苗</td><td>2% 羊毛树树苗</td><td>2% 矿石树树苗</td><td>2% 樱花树树苗<br /></td><td>2% 竹子</td>
-	<td>55% 石英</td><td>20% 粘土球</td><td>9% 下界疣</td><td>5% 烈焰粉</td><td>5% 垂泪藤<br /></td><td>5% 缠怨藤<br /></td><td>1% 恶魂之泪</td>
+	<td>55% 石英</td><td>20% 黏土球</td><td>9% 下界疣</td><td>5% 烈焰粉</td><td>5% 垂泪藤<br /></td><td>5% 缠怨藤<br /></td><td>1% 恶魂之泪</td>
 </tr>
 </tbody></table>
 
@@ -10506,7 +10517,7 @@
 	<a href="https://space.bilibili.com/4469715"><img src="items/bilibili.png" alt="哔哩哔哩" /></a>
 </p>
 
-<p>最后更新 2021-01-09</p>
+<p>最后更新 2021-01-11</p>
 </footer>
 
 </article>
