--- a/test.html
+++ b/test.html
@@ -19,8 +19,36 @@
 		<tr><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:10%;">版本</th><th style="text-align: center;background-color: #505050;color:white;border:1px solid #aaa;border-collapse:collapse;width:90%;">变动</th></tr>
 	</thead>
 	<tbody style="border:1px solid #aaa;border-collapse:collapse;">
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了野花。</td></tr>
-		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了艾草。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">加入了交易机。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="3">1.8.1</th><td style="border:1px solid #aaa;border-collapse:collapse;">交易机不再直接获得附魔之瓶，而是先存储为经验值再转化。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改交易机收购海带和海草的价格为32个。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改了交易机的材质。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="8">1.9</th><td style="border:1px solid #aaa;border-collapse:collapse;">配方中箱子替换为木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">实际方块替换为木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">被强充能时停止工作。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以按左键切换输出方向。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在可以输出到木桶。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">新增了部分可收购物品。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">调整了部分可收购物品价格。</td></tr>
+		<tr><td style="border:1px solid #aaa;border-collapse:collapse;">不再收购骨粉、墨囊和玫瑰红。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.9.3</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了不收购末影珍珠的错误。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="6">1.9.5</th><td style="border:1px solid #aaa;border-collapse:collapse;">修改了机器的GUI。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器没有输出槽了。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">机器支持输出到大箱子。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">当输出的容器空间不足时，机器本身会高亮显示。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在机器输出支持发射器、投掷器和漏斗了。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">为交易机添加了函数标签#cpp:trade_machine。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.9.8</th><td style="border:1px solid #aaa;border-collapse:collapse;">修复了满箱时的错误行为。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改了部分战利品表的调用。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="5">1.10</th><td style="border:1px solid #aaa;border-collapse:collapse;">现在被破坏后会保留内部的价值点。</td></tr>
+				<tr><td style="border:1px solid #aaa;border-collapse:collapse;">现在右侧为可以显示内部的价值存储量的条，条状显示最多100k。</td></tr>
+				<tr><td style="border:1px solid #aaa;border-collapse:collapse;">重做了交易机，具有4种模式：绿宝石模式、附魔之瓶模式、燃烧模式、复制模式。</td></tr>
+				<tr><td style="border:1px solid #aaa;border-collapse:collapse;">原有的物品均替换为相应点数。</td></tr>
+				<tr><td style="border:1px solid #aaa;border-collapse:collapse;">修改了价值点数。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;" rowspan="2">1.10.4</th><td style="border:1px solid #aaa;border-collapse:collapse;">降低绿宝石和附魔之瓶在交易机的价值为2048/512。</td></tr>
+			<tr><td style="border:1px solid #aaa;border-collapse:collapse;">提高了交易机的处理速度。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11</th><td style="border:1px solid #aaa;border-collapse:collapse;">支持燃烧部分新版本物品。</td></tr>
+		<tr><th style="text-align: center;background-color: #dddddd;border:1px solid #aaa;border-collapse:collapse;">1.11.2</th><td style="border:1px solid #aaa;border-collapse:collapse;">重做，现在包含出售和购买两种模式。</td></tr>
 	</tbody>
 </table> 
 
